# neuron-py

./: .gitignore  PLAN.md  README.md  pyproject.toml  test_quick.py  test_v2.py  test_v3.py
examples/: benchmarks.py
neuron/: __init__.py  activations.py  data.py  fourier.py  fourier_conv.py  fourier_init.py  fourier_prune.py  fourier_transformer.py  fourier_v2.py  fourier_v3.py  fourier_v4.py  fourier_weight.py  layers.py  losses.py  model.py  optim.py
